code25_all/python/2018888.txt

'post-commit' hook failed with error output: 
  File "/var/www/svn/repo/hooks/trac-post-commit-hook", line 101
    (options, args) = parser.parse_args(sys.argv[1:])
    ^
SyntaxError: invalid syntax



I'm running Python 2.4.3 on CentOS.

I'm not familiar with Python, so I can't really tell whats happening here and no one seems to have had this issue before (according to Google). 

I was hoping someone here would know what's going on.

Thanks in advance.

EDIT:

If it helps, here is my post-commit script



REPOS="$1"
REV="$2"


LOG='/usr/bin/svnlook log -r $REV $REPOS'
AUTHOR='/usr/bin/svnlook author -r $REV $REPOS'
TRAC_ENV="/var/www/trac/[xxx]/"
TRAC_URL='http://trac.[xxx].com/'

/usr/bin/python /var/www/svn/repo/hooks/trac-post-commit-hook -p "$TRAC_ENV"  -r "$REV"  -u "$AUTHOR" -m "$LOG" -s "$TRAC_URL"


